// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`That correct class is applied when isLit = false 1`] = `
<DocumentFragment>
  <div
    class="Cell "
  />
</DocumentFragment>
`;

exports[`correct class is applied when isLit = false 1`] = `
<DocumentFragment>
  <div
    class="Cell "
  />
</DocumentFragment>
`;

exports[`correct class is applied when isLit = true 1`] = `
<DocumentFragment>
  <div
    class="Cell Cell-lit"
  />
</DocumentFragment>
`;
